# knowledge-retrieval-api

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  tool.gpt
examples/: .gitignore  example.gpt
scripts/: ingest.sh
src/: alembic.ini  config.py  log.py  log_conf.yaml  main.py
src/alembic/: env.py
src/alembic/versions/: 091c4ebd4f6d_initial_migration.py  b11847278494_initial_migration.py
src/database/: __init__.py  db.py  errors.py  main.py  models.py  query.py  test.ipynb
src/db/: __init__.py  errors.py  main.py  query.py
src/ingest/: main.py
